Fix overflowing of dashboard on desktop

--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -225,7 +225,7 @@ header {
 .lower-half {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: 95vh;
   width: 100%;
 }
 
@@ -347,6 +347,7 @@ header {
 .content-section {
   width: 100%;
   margin: 1% 2% 0 2%;
+  overflow-y: scroll;
 }
 
 .card-fade-overlay {
